--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <a href="index.html">
-                    <img class="logo" src="/images/logo.png" alt="Sanrio">
+                    <img class="logo" src="https://jowlly.github.io/images/logo.png" alt="Sanrio">
                 </a>
             </ul>
         </nav>
