--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <a href="index.html">
-                    <img class="logo" src="/images/logo.png" alt="Sanrio">
+                    <img class="logo" src="https://jowlly.github.io/SanrioWeb/images/logo.png" alt="Sanrio">
                 </a>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
 
     <main>
         <div class="hero1">
-            <img class="hero1__image" src="/images/sanrio.png" alt="Sanrio">
+            <img class="hero1__image" src="https://jowlly.github.io/SanrioWeb/images/sanrio.png" alt="Sanrio">
             <p class="hero1__text">Санрио - японская компания, разрабатывающая, лицензирующая и выпускающая
                 каваий-товары: школьные принадлежности и подарки — продающиеся во всём мире и в специализированных
                 магазинах Японии. Наиболее известен персонаж Sanrio Hello Kitty, белая кошечка с красным бантом, ставшая
