--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <a href="index.html">
-                    <img class="logo" src="https://jowlly.github.io/SanrioWeb/images/logo.png" alt="Sanrio">
+                    <img class="logo" src="/images/logo.png" alt="Sanrio">
                 </a>
             </ul>
         </nav>
@@ -43,23 +43,33 @@
             </div>
             <div class="chars__list">
                 <div class="chars-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/kuromi.png" alt="1">
+                    <div class="image-wrapper">
+                        <img src="/images/kuromi.png" alt="1">
+                    </div>
                     <h1 class="chars-item__style">Куроми</h1>
                 </div>
                 <div class="chars-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/hellokitty.png" alt="2">
+                    <div class="image-wrapper">
+                        <img src="/images/hellokitty.png" alt="2">
+                    </div>
                     <h1 class="chars-item__style">Хэлло Китти</h1>
                 </div>
                 <div class="chars-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/mymelody.png" alt="3">
+                    <div class="image-wrapper">
+                        <img src="/images/mymelody.png" alt="3">
+                    </div>
                     <h1 class="chars-item__style">МайМелоди</h1>
                 </div>
                 <div class="chars-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/cinnamon.png" alt="4">
+                    <div class="image-wrapper">
+                        <img src="/images/cinnamon.png" alt="4">
+                    </div>
                     <h1 class="chars-item__style">Синнаморол</h1>
                 </div>
                 <div class="chars-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/keroppi.png" alt="5">
+                    <div class="image-wrapper">
+                        <img src="/images/keroppi.png" alt="5">
+                    </div>
                     <h1 class="chars-item__style">Кероппи</h1>
                 </div>
 
@@ -71,15 +81,15 @@
             </div>
             <div class="extra__list">
                 <div class="extra-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/kalendar.png" alt="1">
+                    <img src="/images/kalendar.png" alt="1">
                     <h1 class="extra-item__style">Календарь</h1>
                 </div>
                 <div class="extra-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/wallpapers.png" alt="2">
+                    <img src="/images/wallpapers.png" alt="2">
                     <h1 class="extra-item__style">Обои</h1>
                 </div>
                 <div class="extra-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/games.png" alt="3">
+                    <img src="/images/games.png" alt="3">
                     <h1 class="extra-item__style">Игры</h1>
                 </div>
 
@@ -93,13 +103,13 @@
             </div>
             <div class="foryou__list">
                 <div class="foryou-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/buy1.png" alt="1">
+                    <img src="/images/buy1.png" alt="1">
                 </div>
                 <div class="foryou-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/buy2.png" alt="2">
+                    <img src="/images/buy2.png" alt="2">
                 </div>
                 <div class="foryou-item">
-                    <img src="https://jowlly.github.io/SanrioWeb/images/buy3.png" alt="3">
+                    <img src="/images/buy3.png" alt="3">
                 </div>
 
             </div>
